--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
 name: Deploy Simple EC2 with CloudFormation
 
 on:
+  push:
+    branches:
+      - main
   repository_dispatch:
     types: [deploy-infra]
 
